switch to use three.min.js (from npm) in html.

--- a/three.js.html
+++ b/three.js.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script src="./lib/three.min.js"></script>
+    <script src="./node_modules/three/three.min.js"></script>
     <script src="scene.js"></script>
 </body>
 </html>
