--- a/three.js.html
+++ b/three.js.html
@@ -3,14 +3,12 @@
 <head>
     <title>My first Three.js app</title>
     <style>
-    html, body { margin:0; overflow: none; height: 100%;
-        /* background-color: rgba(255,0,0,.1); */
-    }
+    html, body { margin:0; overflow: none; height: 100%;}
     canvas { width: 100%; height: 100% }
     </style>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="3jscanvas"></canvas>
     <script src="./node_modules/three/three.min.js"></script>
     <script src="scene.js"></script>
 </body>
