Add drag event for canvas.

--- a/three.js.html
+++ b/three.js.html
@@ -8,7 +8,7 @@
     </style>
 </head>
 <body>
-    <canvas id="3jscanvas"></canvas>
+    <canvas id="3jscanvas" draggable></canvas>
     <script src="./node_modules/three/three.min.js"></script>
     <script src="scene.js"></script>
 </body>
