--- a/three.js.html
+++ b/three.js.html
@@ -13,6 +13,6 @@
     <!-- data-main attribute tells require.js to load
              scripts/main.js after require.js loads. -->
     <script src="./node_modules/three/three.min.js"></script>
-    <script data-main="scene" src="require.js"></script>
+    <script data-main="scripts/scene" src="scripts/require.js"></script>
 </body>
 </html>
