--- a/three.js.html
+++ b/three.js.html
@@ -12,7 +12,7 @@
 
     <!-- data-main attribute tells require.js to load
              scripts/main.js after require.js loads. -->
-    <script src="./node_modules/three/three.js"></script>
-    <script data-main="scripts/main" src="scripts/require.js"></script>
+    <script src="scripts/lib/three.js"></script>
+    <script data-main="scripts/main" src="scripts/lib/require.js"></script>
 </body>
 </html>
