--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <!-- data-main attribute tells require.js to load
              scripts/main.js after require.js loads. -->
     <script src="scripts/lib/three.js"></script>
+
+    <script src="scripts/lib/collada/Animation.js"></script>
+    <script src="scripts/lib/collada/AnimationHandler.js"></script>
+    <script src="scripts/lib/collada/KeyFrameAnimation.js"></script>
+    <script src="scripts/lib/ColladaLoader2.js"></script>
     <script data-main="scripts/main" src="scripts/lib/require.js"></script>
 </body>
 </html>
