--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,19 @@
     <title>My first Three.js app</title>
     <style>
     html, body { margin:0; overflow: none; height: 100%;}
-    canvas { width: 100%; height: 100% }
+    canvas { width: 100%; height: 100%; }
+    span#cspan {
+        position: absolute;
+        bottom: 0;
+        display:block;
+    }
     </style>
 </head>
 <body>
     <canvas id="3jscanvas" draggable></canvas>
+    <span id="cspan">
+        <input type="lineedit" id='console'></input>
+    </span>
 
     <!-- data-main attribute tells require.js to load
              scripts/main.js after require.js loads. -->
